create many pages

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,5 +4,6 @@
 @import './layouts/header';
 @import './layouts/footer';
 @import './layouts/modal';
+@import './layouts/testimonial';
 @import './layouts/scroll';
 @import './sections/main';
