--- a/src/styles/sections/_404.scss
+++ b/src/styles/sections/_404.scss
@@ -12,25 +12,72 @@
    }
    @media (max-width: $tablet) {
       max-width: toRem(600);
+      margin-top: toRem(24);
    }
 }
 .error__content {
    margin-bottom:toRem(80);
+   @media (max-width: $tablet) {
+      margin-bottom:toRem(56);      
+   }
+   @media (max-width: $mobile) {
+      margin-bottom:toRem(36);            
+   }
    & h3 {
       text-align: center;
       margin-bottom: toRem(32);
       font-weight: 400;
+      @media (max-width: $tablet) {
+         margin-bottom: toRem(16);
+         font-size: toRem(20);
+         line-height: toRem(30);
+      }   
+      @media (max-width: $mobile) {
+         font-size: toRem(16);
+         line-height: toRem(24);
+      }   
    }
 }
 .error__btn-container {
    display: flex;
    gap: toRem(20);
    justify-content: center;
+   @media (max-width: $mobile) {
+      gap: toRem(8);   
+   }
+   & a {
+      @include stroke-btn;
+      padding: toRem(7.5);
+      line-height: toRem(24);
+      width: toRem(190);
+      font-weight: 700;
+      text-align: center;
+      cursor: pointer;
+      @media (max-width: $tablet) {
+         font-weight: 500;
+         width: toRem(163);
+         padding-block: toRem(9);
+      }
+      @media (max-width: $mobile) {
+         width: toRem(160);      
+         line-height: toRem(30);
+         padding-block: toRem(6);
+      }
+   }
    & button {
       @include stroke-btn;
       padding: toRem(7.5);
       line-height: toRem(24);
       width: toRem(190);
       font-weight: 700;
+      @media (max-width: $tablet) {
+         font-weight: 500;
+         width: toRem(163);
+         padding-block: toRem(9);
+      }
+      @media (max-width: $mobile) {
+         width: toRem(160);      
+         padding-block: toRem(6);
+      }
    }
 }
