--- a/src/styles/base/_normalize.scss
+++ b/src/styles/base/_normalize.scss
@@ -54,9 +54,23 @@ button {
    border: none;
 }
 
-input, textarea::placeholder {
+input, textarea {
    font-family: inherit;
 }
+
+input::placeholder, textarea::placeholder {
+   font-family: inherit;
+}
+
+input:focus, textarea:focus
+{
+   outline: none !important;
+}
+
+textarea {
+   resize: none;
+}
+
 
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
@@ -67,9 +81,22 @@ input:-webkit-autofill:focus {
     -webkit-text-fill-color: #000 !important;
 }
 
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:active,
+textarea:-webkit-autofill:focus {
+    background-color: #ffff !important;
+    color: #000 !important;
+    -webkit-text-fill-color: #000 !important;
+}
+
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {            
    display: none; 
+}
+
+input[type="radio" i], input[type="checkbox" i] {
+    margin: 0 0 0 0;
 }
