--- a/src/styles/sections/_main.scss
+++ b/src/styles/sections/_main.scss
@@ -12,6 +12,10 @@
 @import './questions';
 @import './news-page';
 @import './photo-view';
+@import './contacts';
+@import './about';
+@import './basket';
+@import './order';
 
 
 .banner
